# folha-scrapy

./: .gitignore  pyproject.toml  quick_check.ipynb  teste.ipynb
clean_data/: 0_join_datasets.ipynb  1_clean_dataset.ipynb
scrapy_folha/: items.py  pipelines.py  settings.py
scrapy_folha/spiders/: search.py
statistics/: compute_statistics.ipynb
