[tool.poetry]
name = "folha-benchmark"
version = "0.1.0"
description = ""
authors = ["Lucas Okamura <lucasokamura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"
sentence-transformers = "^2.2.2"
datasets = "^2.14.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
